# AlgorithmsAI

./: .coverage  .coveragerc  .pylintrc  README.md  network.py  pyproject.toml  trained_model.pkl
.github/workflows/: main.yml
documents/: execution.md  manual.md  specifications.md  testing_documentation  testing_documentation.md  week_report_1  week_report_1.md  week_report_2.md  week_report_3.md  week_report_4.md  week_report_5.md  week_report_6.md
src/: benchmark_networks.py  digit_predicter.ipynb  mnist_loader.py  network.py  simple_network.py  trained_model.pkl
src/tests/: network_test.py
