[tool.poetry]
name = "machinelearning-neuralnetwork"
version = "0.1.0"
description = ""
authors = ["Martin Häggblom <martin.haggblom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
