[tool.poetry]
name = "machinelearning-neuralnetwork"
version = "0.1.0"
description = ""
authors = ["Martin Häggblom <martin.haggblom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
